--- a/assn1/src/main/resources/application.properties
+++ b/assn1/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.mvc.favicon.enabled=false
