--- a/assn1/src/main/resources/application.properties
+++ b/assn1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database=h2
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -7,5 +7,5 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.mvc.favicon.enabled=false
