--- a/assn1/src/main/resources/application.properties
+++ b/assn1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 database=h2
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
